# RemoteControlMCP

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TODO.md  build.rs
docs/: DEVELOPER_SETUP.md
examples/: launch_process_test_helper.rs
instructions/: GENERAL.md
src/: app.rs  main.rs  mcp.rs  tunnel.rs
src/mcp/: file_path.rs  launch_process.rs  ping.rs  read_file.rs  tests.rs  write_file.rs
