[package]
name = "remote-control-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
eframe = { version = "0.35", default-features = false, features = ["default_fonts", "glow"] }
rmcp = { version = "2.2", default-features = false, features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["rt", "io-std", "io-util", "time"] }
serde = { version = "1.0", features = ["derive"] }
schemars = { version = "1.0" }

[dev-dependencies]
rmcp = { version = "2.2", default-features = false, features = ["client"] }
